test/src/e2e_vm_tests/test_programs/should_fail/storage_invalid_storage_key_type/src/main.sw
contract;

storage {
    field in u256::zero(): u64 = 0,
}